epilogue with only ref/bibliography of book

--- a/kitabo/ensi/_toc.yml
+++ b/kitabo/ensi/_toc.yml
@@ -50,5 +50,7 @@ chapters:
             file: act3/part3/part3_1
           - title: Shadow
             file: act3/part3/part3_2
+          - title: Individuation
+            file: act3/part3/part3_3
 
-  - file: act3/part3/part3_3
+  - file: act3/part3/part3_4
